kustomize/infra/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: home-gateway
  namespace: gateway-system
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      hostname: "*.home.lan"
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: home-gateway-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
